new role parameters